[gd_scene load_steps=10 format=3 uid="uid://bsnebuboq7mg8"]

[ext_resource type="PackedScene" uid="uid://3hqpc5vlrj6e" path="res://scenes/game_objects/weapons/weapon/weapon.tscn" id="1_a10u0"]
[ext_resource type="Script" uid="uid://c52batdugrc66" path="res://scenes/game_objects/weapons/range_weapons/range_weapon/range_weapon.gd" id="2_iv4br"]
[ext_resource type="PackedScene" uid="uid://dj18ltpobi6vj" path="res://scenes/vfx/muzzle_flash/muzzle_flash.tscn" id="3_ch2v8"]
[ext_resource type="PackedScene" uid="uid://rvtfy4ss5oe5" path="res://scenes/vfx/bullet_trail/bullet_trail.tscn" id="3_ejd5y"]
[ext_resource type="PackedScene" uid="uid://bl8rbvnnlv5qv" path="res://scenes/components/range_audio/range_audio.tscn" id="4_s2kt3"]
[ext_resource type="PackedScene" uid="uid://m7fg7gawqg77" path="res://scenes/components/random_pitch_audio/random_pitch_audio.tscn" id="5_2hryi"]

[sub_resource type="Animation" id="Animation_ejd5y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Models:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ch2v8"]
resource_name = "fire"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Models:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.05), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s2kt3"]
_data = {
&"RESET": SubResource("Animation_ejd5y"),
&"fire": SubResource("Animation_ch2v8")
}

[node name="RangeWeapon" instance=ExtResource("1_a10u0")]
script = ExtResource("2_iv4br")
projectiles_per_shoot = 0
spread = 0.0
max_ammo = 0
max_chamber = 0
reload_time = 0.1
recoil = Vector3(0, 0, 0)
recoil_mult = 0.2
bullet_trail = ExtResource("3_ejd5y")

[node name="Sprite3D" type="Sprite3D" parent="Models" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
shaded = true
texture_filter = 0

[node name="FireRangeSFX" parent="AudioContainer" index="1" instance=ExtResource("4_s2kt3")]
unique_name_in_owner = true

[node name="FireRandomPitchSFX" parent="AudioContainer" index="2" instance=ExtResource("5_2hryi")]
unique_name_in_owner = true

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_s2kt3")
}

[node name="Spawner" type="Node3D" parent="." index="4"]

[node name="MuzzleFlash" parent="Spawner" index="0" instance=ExtResource("3_ch2v8")]
unique_name_in_owner = true

[node name="ReloadTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="RecoilTimer" type="Timer" parent="." index="6"]
one_shot = true
